Closed
Bug 1350932
Opened 8 years ago
Closed 8 years ago
[Mac] BBC videos take too long to play or fails to play at all
Categories
(Core :: Audio/Video: Playback, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | unaffected |
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | verified |
| firefox55 | --- | verified |
People
(Reporter: bmaris, Assigned: jya)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
59 bytes,
text/x-review-board-request
|
mozbugz
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details |
|
59 bytes,
text/x-review-board-request
|
mozbugz
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details |
[Affected versions]:
- latest Developer Edition 54.0a2
- latest Nightly 55.0a1
[Affected platforms]:
- Mac OS X 10.11.6
- macOS 10.12.2
[Steps to reproduce]:
1. Start Nightly
2. Visit bbc.co.uk
3. Load any video from BBC
[Expected result]:
- Video loads in a few seconds
[Actual result]:
- Video takes too long to load, a few minutes maybe (or does not load at all, spinning wheel of death is displayed the entire duration).
[Regression range]:
- This is a recent regression, but I'm not sure which bug caused this, here is the range from mozregression:
Last good revision: 195049fabb7ac5709e5f75614ba630ba3d1b5a9b (2017-02-14)
First bad revision: 0a7831d838f793a263456df62f95a615472a7f95 (2017-02-15)
Pushlog:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=195049fabb7ac5709e5f75614ba630ba3d1b5a9b&tochange=0a7831d838f793a263456df62f95a615472a7f95
I could not bisec further because of an error:
0:09.07 ERROR: [SSL: SSLV3_ALERT_HANDSHAKE_FAILURE] sslv3 alert handshake failure (_ssl.c:590)
[Additional notes]
- I tried to reproduce this issue on Windows and Linux but without success, it's Mac specific.
| Assignee | ||
Comment 1•8 years ago
|
||
will have a look
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
Comment 2•8 years ago
|
||
I can repro this problem on my MacBook Pro(10.12.3) as well.
Component: Audio/Video → Audio/Video: Playback
Priority: -- → P1
| Assignee | ||
Comment 3•8 years ago
|
||
We appear to be served Flash from bbc.co.uk
Flags: needinfo?(jyavenard)
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 6•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8852219 [details]
Bug 1350932: P1. Add mochitest.
https://reviewboard.mozilla.org/r/124452/#review127000
::: dom/media/mediasource/test/test_AVC3_mp4.html:4
(Diff revision 1)
> +<!DOCTYPE HTML>
> +<html>
> +<head>
> + <title>MSE: seeking to end of data with data gap.</title>
Incorrect title I think! Should probably just be "AVC3 playback".
Attachment #8852219 -
Flags: review?(gsquelart) → review+
Comment 7•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8852220 [details]
Bug 1350932: P2. Ensure the updated H264 extadata is used.
https://reviewboard.mozilla.org/r/124458/#review127008
Attachment #8852220 -
Flags: review?(gsquelart) → review+
| Assignee | ||
Comment 8•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8852219 [details]
Bug 1350932: P1. Add mochitest.
https://reviewboard.mozilla.org/r/124452/#review127010
::: dom/media/mediasource/test/test_AVC3_mp4.html:4
(Diff revision 1)
> +<!DOCTYPE HTML>
> +<html>
> +<head>
> + <title>MSE: seeking to end of data with data gap.</title>
yes! thanks for that.
I also will disable it on android, as we still have android machines on treeherder where MSE isn't usable :(
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 11•8 years ago
|
||
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/96526385e18d
P1. Add mochitest. r=gerald
https://hg.mozilla.org/integration/autoland/rev/1ae46440de55
P2. Ensure the updated H264 extadata is used. r=gerald
Comment 12•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/96526385e18d
https://hg.mozilla.org/mozilla-central/rev/1ae46440de55
Status: NEW → RESOLVED
Closed: 8 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
| Assignee | ||
Comment 13•8 years ago
|
||
Comment on attachment 8852219 [details]
Bug 1350932: P1. Add mochitest.
Approval Request Comment
[Feature/Bug causing the regression]: 1336358
[User impact if declined]: Popular web site (BBC) videos will no longer play
[Is this code covered by automated tests?]: yes, tests added to ensure we won't regress the site again
[Has the fix been verified in Nightly?]: no
[Needs manual test from QE? If yes, steps to reproduce]: Steps provided in original post
[List of other uplifts needed for the feature/fix]: Please uplift P1 (regression test) and P2 (actual fix)
[Is the change risky?]: no
[Why is the change risky/not risky?]: We do the right thing... videos stopped playing, it can only get better anyway.
[String changes made/needed]:
Attachment #8852219 -
Flags: approval-mozilla-aurora?
Updated•8 years ago
|
status-firefox-esr52:
--- → unaffected
Comment 14•8 years ago
|
||
Comment on attachment 8852219 [details]
Bug 1350932: P1. Add mochitest.
h264 regression fix for aurora54
Attachment #8852219 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•8 years ago
|
Attachment #8852220 -
Flags: approval-mozilla-aurora+
Updated•8 years ago
|
Flags: qe-verify+
| Reporter | ||
Comment 15•8 years ago
|
||
I can verify this fixed using latest Nightly 55.0a1 on macOS 10.12.2 and Mac OS X 10.11.6. To note that I still run into the issue described here: https://bugzilla.mozilla.org/show_bug.cgi?id=1348326#c2. Marking as verified on 55.
| Assignee | ||
Comment 18•8 years ago
|
||
remote: https://hg.mozilla.org/releases/mozilla-aurora/rev/46337c99e4befa03be6ceb7ce0596e06027b2c49
remote: https://hg.mozilla.org/releases/mozilla-aurora/rev/559f43c151abbc761012740541915add00df5161
Flags: needinfo?(jyavenard)
Comment 19•8 years ago
|
||
Verified fixed Fx 54b4, OS X 10.11.
You need to log in
before you can comment on or make changes to this bug.
Description
•