Bug 1350932: P2. Ensure the updated H264 extadata is used. r=gerald a=jcristau

For AVC3 content, the initial init segment doesn't contain the SPS/PPS NALs required to create the decoder.
However, we created the decoder using such init segment, causing decoding failures.

MozReview-Commit-ID: BZO1gkasf8q